vm/snapshots/variables-local-compound_assignments-CompoundAssignmentsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
All compound assignment tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
All compound assignment tests passed.
----- STDERR -----
