vm/snapshots/variables-local-declaration_patterns-DeclarationPatternsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
All declaration pattern tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
All declaration pattern tests passed.
----- STDERR -----
