vm/snapshots/variables-local-increment_decrement-IncrementDecrementOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
All increment/decrement tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
All increment/decrement tests passed.
----- STDERR -----
