vm/snapshots/variables-local-primitive_types-PrimitiveTypesOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
All primitive type local variable tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
All primitive type local variable tests passed.
----- STDERR -----
