vm/snapshots/variables-local-reference_types-ReferenceTypesOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
All reference type local variable tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
All reference type local variable tests passed.
----- STDERR -----
