vm/snapshots/variables-parameters-array_parameters-ArrayParametersOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Array parameters test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Array parameters test passed.
----- STDERR -----
