vm/snapshots/variables-parameters-instance_method_parameters-InstanceMethodParametersOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Instance method parameters test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Instance method parameters test passed.
----- STDERR -----
